           Note: Pressing C for playlist is not useful as the initial playlist is gone, and switching to other windows is problematic anyway
- add:     'Volume' setting added to all applicable modules
- fix:     Bug which in some instances caused volume to be set to 0
- add:     Up/Down in trivia now skips forward/back 3 slides

[- 0.0.39 -]

- add:     Ability to post logs via Pastebin
- fix:     3D ratings bumpers were not able to be randomly selected

[- 0.0.38 -]

- add:     Added more comprehensive debug logging

[- 0.0.37 -]

- change:  Trailer setting 'Limit rating' moved to module as 'Rating Limit' with options for None, Max and Match features
- add:     Trailer module subsetting 'Limit rating: Max' which allows choice of ratings from the default rating system
- fix:     Possible fix for encoding issues when using trailers from the Kodi Database
- fix:     Changes to database handling to hopefully prevent 'OperationalError: unable to open database file' errors
- add:     Add 'APPLY TO QUEUE' option to playlist dialog
- change:  Rearrange some settings sections and make wording on some settings clearer
- add:     Added 'Content' as a source for Trailers which will play trailers in the CinemaVision 'Trailers' directory
- fix:     Rating style setting was always showing MPAA styles
- add:     Playlist dialog now also shows the year if available
- add:     Ability to use context menu on a collection
- change:  Removed xbmclogs.com option from settings (site down - for good?)
- fix:     Possible fix for crashes with mediacodec? Needs testing
- add:     Added the ability for skinners to pass 'movied=<id>' as an argument
- add:     Added the ability for skinners to pass 'selction' as an argument (will play current listitem)
- add:     Added the ability to add a line to action files for http headers -> HEADER:{"header_key":"header_value"} <-JSON string


[- 0.0.36 -]

- fix:    Rating bumper not showing when 'Style' set to 'Default' in the module